# pico-c

./: README.md
pico1/: main.cpp
pico2/: main.cpp
pico3/: CMakeLists.txt  main.cpp
pico_blink/: CMakeLists.txt  main.cpp
